--- a/.github/workflows/dominos.yml
+++ b/.github/workflows/dominos.yml
@@ -26,5 +26,11 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pip install pytest
-        pytest
+        pip install pytest pytest-cov
+        pytest --cov=./
+    - name: Coverage
+      env:
+        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+      run: |
+        pip install codecov
+        codecov -t
