--- a/.github/workflows/dominos.yml
+++ b/.github/workflows/dominos.yml
@@ -33,4 +33,4 @@ jobs:
         CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
       run: |
         pip install codecov
-        codecov -t
+        codecov -t $CODECOV_TOKEN
